--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "url": "https://github.com/gentics/gatsby-mesh-example.git"
   },
   "license": "MIT",
-  "author": "Rafael Cordones <rafael@cordones.me>",
+  "author": "Johannes Schüth <j.schueth@gentics.com>",
   "dependencies": {
     "gatsby": "1.9.153",
     "gatsby-link": "1.6.34",
     "gatsby-plugin-manifest": "1.0.12",
     "gatsby-plugin-offline": "1.0.12",
     "gatsby-plugin-react-helmet": "2.0.3",
-    "gatsby-source-mesh": "0.0.1",
+    "gatsby-source-mesh": "0.0.2",
     "react-helmet": "5.2.0",
     "react-markdown": "3.1.4",
     "react-star-rating-component": "1.3.0"
