--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-source-plugin-store",
+  "name": "mesh-gatsby-example",
   "description": "Gentics Mesh Gatsby Example",
   "version": "1.0.0",
   "author": "Johannes Schüth <j.schueth@gentics.com>",
